--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <script>
     window.onload = function(e){
-      liff.init({liffId: "1657644246-L5a8KnE0"}, function(){
+      liff.init({liffId: "1657644246-QDZwE0Xz"}, function(){
         liff.ready.then(() =>{
           if(liff.isLoggedIn()){
              var dd = getParameterByName("BB")
@@ -206,9 +206,9 @@
         "style": "secondary",
         "height": "sm",
         "action": {
-          "type": "message",
+          "type": "uri",
           "label": "ร่วมกิจกรรม",
-          "text": "ทางเข้าร่วม : https://bit.ly/autogamess"
+          "uri": "https://bit.ly/autogamess"
         },
         "color": "#00FF00"
       },
